--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Jan Arroyo</title>
   <link href="styles.css" rel="stylesheet" />
 
-  <!-- Local styles (scoped) for spotlight + theme switch + smooth transitions -->
+  <!-- Scoped additions (kept minimal so they don't fight styles.css) -->
   <style>
     /* Smooth theme transitions */
     html, body, .nav, .btn, .btn-primary, .spot-card, .spot-body,
@@ -19,13 +19,13 @@
       .hero-right img, .theme-switch .label, footer { transition: none !important; }
     }
 
-    /* Typing line (keeps your vibe) */
+    /* Typing line */
     .typing-wrap{ display:flex; gap:6px; align-items:center; margin-top:6px; color:var(--muted); }
     .typing-line{ font-family: ui-monospace, SFMono-Regular, Menlo, monospace; white-space:nowrap; }
     .caret{ display:inline-block; width:10px; height:1.1em; margin-left:2px; background: currentColor; animation: blink 1s step-end infinite; vertical-align: text-bottom; }
     @keyframes blink{ 50%{ opacity:0; } }
 
-    /* Rotating hero photo (fade between sources) */
+    /* Rotating hero photo (cross-fade) */
     .hero-right { position: relative; }
     .hero-right .rot-img{
       width:100%; height:auto; border-radius:22px; border:1px solid var(--bd); box-shadow:var(--shadow-soft);
@@ -45,10 +45,8 @@
       mask-image:linear-gradient(90deg,transparent 0,#000 28px calc(100% - 28px),transparent 100%);
     }
     .spot-row::-webkit-scrollbar{ display:none; }
-
     .spot-card{
-      scroll-snap-align:start;
-      border-radius:22px; background:var(--panel); box-shadow:var(--shadow-soft);
+      scroll-snap-align:start; border-radius:22px; background:var(--panel); box-shadow:var(--shadow-soft);
       text-decoration:none; color:inherit; border:1px solid var(--bd);
       display:grid; grid-template-rows:150px auto; overflow:hidden;
       transition:transform .15s ease, box-shadow .2s ease, border-color .2s ease;
@@ -71,8 +69,7 @@
 
     /* Footer theme switch (pill slider) */
     .theme-switch{
-      width:min(1200px,96vw);
-      margin:32px auto 0;
+      width:min(1200px,96vw); margin:32px auto 0;
       display:flex; align-items:center; justify-content:center; gap:12px;
     }
     .theme-switch .label{
@@ -82,30 +79,23 @@
     .switch{ position:relative; width:56px; height:30px; cursor:pointer; display:inline-block; }
     .switch input{ position:absolute; width:0; height:0; opacity:0; }
     .slider{
-      position:absolute; inset:0;
-      background:var(--panel); border:1px solid var(--bd); border-radius:999px;
-      box-shadow:var(--shadow-soft);
-      transition: background-color .25s ease, border-color .25s ease, box-shadow .25s ease;
+      position:absolute; inset:0; background:var(--panel); border:1px solid var(--bd); border-radius:999px;
+      box-shadow:var(--shadow-soft); transition: background-color .25s ease, border-color .25s ease, box-shadow .25s ease;
     }
     .slider::after{
-      content:""; position:absolute; top:2px; left:2px;
-      width:26px; height:26px; border-radius:999px; background:var(--text);
-      transition: transform .25s ease, background-color .25s ease;
-      box-shadow: 0 1px 2px rgba(0,0,0,.15);
+      content:""; position:absolute; top:2px; left:2px; width:26px; height:26px; border-radius:999px; background:var(--text);
+      transition: transform .25s ease, background-color .25s ease; box-shadow: 0 1px 2px rgba(0,0,0,.15);
     }
     .switch input:checked + .slider::after{ transform: translateX(26px); }
 
     /* Spotify card */
     .spotify-wrap{ width:min(1200px,96vw); margin:24px auto 0; }
-    .spotify-card{
-      border-radius:18px; border:1px solid var(--bd); background:var(--panel);
-      box-shadow:var(--shadow-soft); padding:8px;
-    }
+    .spotify-card{ border-radius:18px; border:1px solid var(--bd); background:var(--panel); box-shadow:var(--shadow-soft); padding:8px; }
     .spotify-card iframe{ width:100%; height:152px; border:0; border-radius:12px; display:block; }
   </style>
 </head>
 <body>
-  <!-- Nav (your structure) -->
+  <!-- Nav (unchanged) -->
   <nav class="nav">
     <div class="narrow nav-inner">
       <a class="brand" href="./index.html">JAN</a>
@@ -120,13 +110,12 @@
   </nav>
 
   <main class="page">
-    <!-- Hero -->
+    <!-- Hero (Hawaii first, cycles through photos; typing + cout line present) -->
     <section class="hero-split">
       <div class="hero-left">
         <div class="hello">cout &lt;&lt; "hello world";</div>
         <h1>I’m <span class="brand-accent">Jan Arroyo</span></h1>
 
-        <!-- Typing line (editable phrases below in JS) -->
         <div class="typing-wrap">
           <span class="typing-line" id="typing">a PM trying</span>
           <span class="caret" aria-hidden="true"></span>
@@ -139,16 +128,15 @@
         </div>
       </div>
 
-      <!-- Rotating hero photo -->
       <div class="hero-right">
-        <!-- Provide 2–5 images here; first one is visible on load -->
+        <!-- Hawaii photo is primary; then headshot + Marshall rotate in -->
         <img class="rot-img active" src="images/Hawaii.JPG" alt="Jan at the beach" width="800" height="1040" />
-        <img class="rot-img" src="images/headshot.JPG" alt="Jan headshot" width="800" height="1040" />
+        <img class="rot-img" src="images/headshot.JPG" alt="Headshot" width="800" height="1040" />
         <img class="rot-img" src="images/Marshall.JPG" alt="USC Marshall" width="800" height="1040" />
       </div>
     </section>
 
-    <!-- Project Spotlight -->
+    <!-- Project Spotlight (previews match Work panels) -->
     <section class="spotlight" aria-label="Project Spotlight">
       <h2>Project Spotlight</h2>
       <div class="spotlight-wrap">
@@ -157,11 +145,8 @@
         </button>
 
         <div class="spot-row" id="spotRow">
-          <!-- Use the same preview images you show inside work.html panels -->
           <a class="spot-card" href="work.html#quokka">
-            <div class="spot-media">
-              <img src="Projects/Quokka1.jpg" alt="Quokka Brew preview" loading="lazy" />
-            </div>
+            <div class="spot-media"><img src="Projects/Quokka1.jpg" alt="Quokka Brew preview" loading="lazy" /></div>
             <div class="spot-body">
               <div class="spot-title">Quokka Brew — Design Research</div>
               <p class="spot-desc">60+ interviews and iterative can designs that improved shelf recognition.</p>
@@ -169,9 +154,7 @@
           </a>
 
           <a class="spot-card" href="work.html#clear-clinical">
-            <div class="spot-media">
-              <img src="Projects/ClearClinical1.jpg" alt="Clear Clinical preview" loading="lazy" />
-            </div>
+            <div class="spot-media"><img src="Projects/ClearClinical1.jpg" alt="Clear Clinical preview" loading="lazy" /></div>
             <div class="spot-body">
               <div class="spot-title">Clear Clinical — Strategy &amp; UX</div>
               <p class="spot-desc">Merged mid + final decks: research synthesis, roadmap, and proposals.</p>
@@ -179,9 +162,7 @@
           </a>
 
           <a class="spot-card" href="work.html#ey-workshop">
-            <div class="spot-media">
-              <img src="Projects/EY1.jpg" alt="EY Workshop preview" loading="lazy" />
-            </div>
+            <div class="spot-media"><img src="Projects/EY1.jpg" alt="EY Workshop preview" loading="lazy" /></div>
             <div class="spot-body">
               <div class="spot-title">EY Workshop — Design Thinking</div>
               <p class="spot-desc">Hands-on session for students: problem framing, ideation, prototyping.</p>
@@ -189,9 +170,7 @@
           </a>
 
           <a class="spot-card" href="work.html#advocacy-day">
-            <div class="spot-media">
-              <img src="Projects/Partnership_Advocacy_Day1.jpg" alt="Policy Advocacy Day preview" loading="lazy" />
-            </div>
+            <div class="spot-media"><img src="Projects/Partnership_Advocacy_Day1.jpg" alt="Policy Advocacy Day preview" loading="lazy" /></div>
             <div class="spot-body">
               <div class="spot-title">Policy Advocacy Day — Sacramento</div>
               <p class="spot-desc">Met with CA legislators to advocate for education &amp; youth policies.</p>
@@ -199,9 +178,7 @@
           </a>
 
           <a class="spot-card" href="work.html#magazine">
-            <div class="spot-media">
-              <img src="Projects/Magazine1.jpg" alt="Magazine preview" loading="lazy" />
-            </div>
+            <div class="spot-media"><img src="Projects/Magazine1.jpg" alt="Magazine preview" loading="lazy" /></div>
             <div class="spot-body">
               <div class="spot-title">Magazine Feature</div>
               <p class="spot-desc">Press coverage of first-gen leadership, BTG projects, and community work.</p>
@@ -215,11 +192,10 @@
       </div>
     </section>
 
-    <!-- Spotify (restored) -->
+    <!-- Spotify embed (replace src with your original playlist if different) -->
     <section class="spotify-wrap">
       <div class="spotify-card">
-        <!-- Replace with your playlist URI if different -->
-        <iframe style="border-radius:12px"
+        <iframe
           src="https://open.spotify.com/embed/playlist/37i9dQZF1DX4WYpdgoIcn6?utm_source=generator"
           loading="lazy" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
         </iframe>
@@ -228,7 +204,7 @@
 
   </main>
 
-  <!-- Centered theme switch -->
+  <!-- Light/Dark toggle -->
   <div class="theme-switch" role="group" aria-label="Color Theme">
     <span class="label"><span id="modeWord">Light</span> Mode</span>
     <label class="switch" aria-label="Toggle color theme">
@@ -250,7 +226,7 @@
     document.getElementById('spotLeft').addEventListener('click', ()=> spotRow.scrollBy({left: -spotRow.clientWidth*0.9, behavior:'smooth'}));
     document.getElementById('spotRight').addEventListener('click', ()=> spotRow.scrollBy({left:  spotRow.clientWidth*0.9, behavior:'smooth'}));
 
-    // Typing line — edit phrases here
+    // Typing line
     const phrases = [
       'a PM trying',
       'TPM / APM — I like clean specs and useful products',
@@ -263,12 +239,9 @@
       pos += dir;
       typingEl.textContent = text.slice(0, pos);
       if (dir > 0 && pos === text.length){
-        dir = -1; // delete
-        setTimeout(typeLoop, 1200);
+        dir = -1; setTimeout(typeLoop, 1200);
       } else if (dir < 0 && pos === 0){
-        dir = 1; // next
-        p = (p + 1) % phrases.length;
-        setTimeout(typeLoop, 280);
+        dir = 1; p = (p + 1) % phrases.length; setTimeout(typeLoop, 280);
       } else {
         setTimeout(typeLoop, dir > 0 ? 34 : 18);
       }
@@ -284,34 +257,25 @@
       imgs[i].classList.add('active');
     }, 4200);
 
-    // Theme init + pill switch
+    // Theme toggle (persist)
     const root = document.documentElement;
     const chk  = document.getElementById('themeChk');
     const word = document.getElementById('modeWord');
-
     function applyTheme(mode, {persist=true, sync=true} = {}){
       root.setAttribute('data-theme', mode);
       if (persist) localStorage.setItem('jan_theme', mode);
-      if (sync){
-        const isDark = mode === 'dark';
-        chk.checked = isDark;
-        word.textContent = isDark ? 'Dark' : 'Light';
-      }
+      if (sync){ const dark = mode==='dark'; chk.checked = dark; word.textContent = dark ? 'Dark' : 'Light'; }
     }
     (function initTheme(){
       const saved = localStorage.getItem('jan_theme');
       const systemDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
-      const mode = saved || (systemDark ? 'dark' : 'light');
-      applyTheme(mode, {persist:false});
+      applyTheme(saved || (systemDark ? 'dark' : 'light'), {persist:false});
     })();
     chk.addEventListener('change', () => applyTheme(chk.checked ? 'dark' : 'light'));
-
     if (window.matchMedia){
       const mql = window.matchMedia('(prefers-color-scheme: dark)');
       mql.addEventListener?.('change', e => {
-        if (!localStorage.getItem('jan_theme')){
-          applyTheme(e.matches ? 'dark' : 'light');
-        }
+        if (!localStorage.getItem('jan_theme')) applyTheme(e.matches ? 'dark' : 'light');
       });
     }
   </script>
