--- a/index.html
+++ b/index.html
@@ -97,23 +97,24 @@
       <div class="spot-row" id="spotRow" tabindex="0" aria-label="Spotlight projects">
         <!-- If you have cover images, use <img>. For deck-only items, tile fallback looks clean. -->
 
-        <!-- Quokka (deck cover fallback) -->
-        <a class="spot-card" href="work.html#quokka">
-          <div class="spot-media tile">Quokka Brew</div>
-          <div class="spot-body">
-            <div class="spot-card-title">Quokka Brew — Design Research</div>
-            <p class="spot-desc">60+ interviews and iterative can designs that improved shelf recognition.</p>
-          </div>
-        </a>
+       <!-- Quokka (deck-only, text tile) -->
+<a class="spot-card" href="work.html#quokka">
+  <div class="spot-media tile">Quokka Brew</div>
+  <div class="spot-body">
+    <div class="spot-card-title">Quokka Brew — Design Research</div>
+    <p class="spot-desc">60+ interviews and iterative can designs that improved shelf recognition.</p>
+  </div>
+</a>
 
-        <!-- Clear Clinical (deck cover fallback) -->
-        <a class="spot-card" href="work.html#clear-clinical">
-          <div class="spot-media tile alt">Clear Clinical</div>
-          <div class="spot-body">
-            <div class="spot-card-title">Clear Clinical — Strategy &amp; UX</div>
-            <p class="spot-desc">Merged mid + final decks: research synthesis, roadmap, and proposals.</p>
-          </div>
-        </a>
+<!-- Clear Clinical (deck-only, text tile) -->
+<a class="spot-card" href="work.html#clear-clinical">
+  <div class="spot-media tile alt">Clear Clinical</div>
+  <div class="spot-body">
+    <div class="spot-card-title">Clear Clinical — Strategy &amp; UX</div>
+    <p class="spot-desc">Merged mid + final decks: research synthesis, roadmap, and proposals.</p>
+  </div>
+</a>
+
 
         <!-- EY Workshop (real image) -->
         <a class="spot-card" href="work.html#ey-workshop">
