--- a/index.html
+++ b/index.html
@@ -45,33 +45,49 @@
     </div>
 
     <div class="splash-right">
-      <!-- FLIP CARD (same behavior as your original) -->
-      <div class="flip-card" id="aboutFlip">
-        <div class="flip-inner">
-          <!-- FRONT -->
-          <div class="flip-face flip-front">
-            <img src="images/Hawaii.JPG" alt="Jan Arroyo">
-          </div>
+      <!-- Flip Card -->
+<div class="flip-card" id="aboutFlip">
+  <div class="flip-inner">
+    <!-- FRONT -->
+    <div class="flip-face flip-front">
+      <img src="images/Hawaii.JPG" alt="Jan Arroyo" />
+    </div>
 
-          <!-- BACK -->
-          <div class="flip-face flip-back">
-            <div class="about-back">
-              <img class="about-avatar" src="images/headshot.jpg" alt="Jan – headshot">
-              <p class="about-intro">
-                I’ve been a builder for as long as I can remember. I like clear specs,
-                fast feedback loops, and shipping useful things with kind teams.
-              </p>
-              <ul class="about-bullets">
-                <li>🎓 studying business + CS + AI at USC</li>
-                <li>☕️ an (avid) barista and baker</li>
-                <li>🚀 a founder building and growing crazy ideas</li>
-                <li>🏃‍♂️ a decent runner</li>
-                <li>🧭 a PM trying to build cool things</li>
-              </ul>
-            </div>
-          </div>
+    <!-- BACK -->
+    <div class="flip-face flip-back">
+      <div class="about-back">
+        <img class="about-avatar" src="images/headshot.jpg" alt="Jan – headshot" />
+
+        <p class="about-intro">
+          I’m Jan Arroyo — a builder and runner passionate about combining 
+          business, design, and technology. I love creating clear specs, 
+          fast feedback loops, and useful products that make life easier.
+        </p>
+
+        <p class="about-intro">
+          I’ve worked on consulting projects with global companies and startups, 
+          led student teams at USC, and built tools that blend product, strategy, 
+          and engineering. Outside of work, you’ll find me training for marathons, 
+          making matcha, or baking for friends.
+        </p>
+
+        <ul class="about-bullets">
+          <li>🎓 Business + CSBA @ USC ’26</li>
+          <li>🚀 Product & consulting projects with Microsoft, Amazon, Accenture</li>
+          <li>🏃‍♂️ Marathon runner & lifelong athlete</li>
+          <li>☕ Avid barista and baker</li>
+        </ul>
+
+        <div class="contact-links">
+          <a class="ghost" href="mailto:janarroy@usc.edu">Email</a>
+          <a class="ghost" href="Jan_Arroyo_Resume.pdf" target="_blank">Résumé</a>
+          <span class="location">📍 Currently Los Angeles</span>
         </div>
       </div>
+    </div>
+  </div>
+</div>
+
 
       <!-- Spotify -->
       <div class="spotify-wrap" style="max-width:520px;width:100%;margin-top:14px;">
