--- a/races.html
+++ b/races.html
@@ -150,18 +150,24 @@
 </head>
 
 <body class="plain-bg">
-  <nav class="nav">
+  <nav class="nav nav-simple">
     <div class="container nav-inner">
-      <a class="brand" href="index.html">Jan</a>
-      <div class="nav-links">
-        <a class="btn" href="index.html#work">Projects</a>
-        <a class="btn" href="races.html">Races</a>
-        <a class="btn" href="#bake">Bake</a>
-        <a class="btn" href="#travel">Travel</a>
-        <a class="btn" href="#contact">Contact</a>
+      <!-- Snoopy logo (left) -->
+      <a class="brand-logo" href="./" aria-label="Home">
+        <img src="Snoopy_Welcome.png" alt="Snoopy waving hi" />
+      </a>
+  
+      <!-- Centered links (no pills) -->
+      <div class="nav-links nav-center">
+        <a href="work.html">Projects</a>
+        <a href="races.html">Races</a>
+        <a href="bake.html">Bake</a>
+        <a href="travel.html">Travel</a>
+        <a href="#contact">Contact</a>
       </div>
     </div>
   </nav>
+  
 
   <main class="container work">
     <h1 class="page-title">Races</h1>
