--- a/travel.html
+++ b/travel.html
@@ -163,19 +163,24 @@
 </head>
 <body>
 
-  <!-- Top nav -->
-  <header class="topbar">
-    <div class="topbar-inner">
-      <div class="brand"><a href="index.html">JAN</a></div>
-      <nav class="nav">
-        <a class="pill" href="index.html">Projects</a>
-        <a class="pill" href="races.html">Races</a>
-        <a class="pill" href="bake.html">Bake</a>
-        <a class="pill active" href="travel.html">Travel</a>
-        <a class="pill" href="work.html">Contact</a>
-      </nav>
+  <nav class="nav nav-simple">
+    <div class="container nav-inner">
+      <!-- Snoopy logo (left) -->
+      <a class="brand-logo" href="./" aria-label="Home">
+        <img src="Snoopy_Welcome.png" alt="Snoopy waving hi" />
+      </a>
+  
+      <!-- Centered links (no pills) -->
+      <div class="nav-links nav-center">
+        <a href="work.html">Projects</a>
+        <a href="races.html">Races</a>
+        <a href="bake.html">Bake</a>
+        <a href="travel.html">Travel</a>
+        <a href="#contact">Contact</a>
+      </div>
     </div>
-  </header>
+  </nav>
+  
 
   <!-- background dashed route + ✈️ emoji following the path -->
   <svg class="scene" viewBox="0 0 1440 900" preserveAspectRatio="none" aria-hidden="true">
