--- a/work.html
+++ b/work.html
@@ -133,18 +133,24 @@
 </head>
 <body>
   <!-- Nav -->
-  <nav class="nav">
-    <div class="narrow nav-inner">
-      <a class="brand" href="./index.html">JAN</a>
-      <div class="nav-links">
-        <a class="btn" href="work.html">Projects</a>
-        <a class="btn" href="races.html">Races</a>
-        <a class="btn" href="bake.html">Bake</a>
-        <a class="btn" href="travel.html">Travel</a>
-        <a class="btn" href="#contact">Contact</a>
+  <nav class="nav nav-simple">
+    <div class="container nav-inner">
+      <!-- Snoopy logo (left) -->
+      <a class="brand-logo" href="./" aria-label="Home">
+        <img src="Snoopy_Welcome.png" alt="Snoopy waving hi" />
+      </a>
+  
+      <!-- Centered links (no pills) -->
+      <div class="nav-links nav-center">
+        <a href="work.html">Projects</a>
+        <a href="races.html">Races</a>
+        <a href="bake.html">Bake</a>
+        <a href="travel.html">Travel</a>
+        <a href="#contact">Contact</a>
       </div>
     </div>
   </nav>
+  
 
   <main class="page">
     <!-- Snoopy welcome -->
