--- a/index.html
+++ b/index.html
@@ -8,19 +8,24 @@
   <link href="styles.css" rel="stylesheet" />
 </head>
 <body class="oscar-bg">
-  <!-- NAV -->
-  <nav class="nav">
+  <nav class="nav nav-simple">
     <div class="container nav-inner">
-      <a class="brand" href="./">JAN</a>
-      <div class="nav-links">
-        <a class="btn" href="work.html">Projects</a>
-        <a class="btn" href="races.html">Races</a>
-        <a class="btn" href="bake.html">Bake</a>
-        <a class="btn" href="travel.html">Travel</a>
-        <a class="btn" href="#contact">Contact</a>
+      <!-- Snoopy logo (left) -->
+      <a class="brand-logo" href="./" aria-label="Home">
+        <img src="Snoopy_Welcome.png" alt="Snoopy waving hi" />
+      </a>
+  
+      <!-- Centered links (no pills) -->
+      <div class="nav-links nav-center">
+        <a href="work.html">Projects</a>
+        <a href="races.html">Races</a>
+        <a href="bake.html">Bake</a>
+        <a href="travel.html">Travel</a>
+        <a href="#contact">Contact</a>
       </div>
     </div>
   </nav>
+  
 
   <!-- HERO / SPLASH -->
   <header class="container splash">
@@ -82,7 +87,7 @@
 
               <div class="contact-links">
                 <a class="ghost" href="mailto:janarroy@usc.edu">Email</a>
-                <a class="ghost" href="Jan_Arroyo_Resume.pdf" target="_blank" rel="noopener">Résumé</a>
+                <a class="ghost" href="Jan_Arroyo_Resume.pdf" target="_blank" rel="noopener">Resume</a>
               </div>
             </div>
           </div>
